--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,10 @@
 	<br/>
 	<a href="#/faq">FAQ</a>
 	<br/>
+	<a href="#/post/1">1st Post</a>
+	<br/>
+	<a href="#/post/3">3rd Post</a>
+	<br/>
 	<script src="js/jquery-1.11.1.min.js" type="application/javascript"></script>
 	<script src="js/main.js" type="application/javascript"></script>
 </body>
